--- a/tictactoe/tictactoe.cabal
+++ b/tictactoe/tictactoe.cabal
@@ -19,6 +19,6 @@ executable tictactoe
   main-is:           Main.hs 
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, haskeline >=0.7 && <0.8
+  build-depends:       base >=4.6 && <4.7, haskeline >=0.7 && <0.8, ansi-terminal >=0.6 && <0.7, mtl >=2.1 && <2.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
